website/websites/gp4/code/pidigits-scala.log
BUILD COMMANDS FOR: pidigits.scala

Wed Mar 21 11:46:59 PDT 2007

( if [ ! -d pidigits.scala_run ] ; then mkdir pidigits.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/pidigits/pidigits.scala pidigits.scala_run/pidigits.scala
( cd pidigits.scala_run ; /opt/scala-2.4.0/bin/scalac pidigits.scala )
pidigits.scala:55: error: value unary_- is not a member of scala.BigInt
      Z = compose(Array(10, (-y) * 10, 0, 1), Z)
                              ^
one error found
make[3]: [pidigits.scala_run] Error 1 (ignored)
touch pidigits.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.4.0/bin/scala -classpath pidigits.scala_run pidigits %A
************************************************************
*   TEST (pidigits.scala_run) FAILED - ERROR:  pidigits.scala_out differs from Output.500
************************************************************
-rw-r--r-- 1 dunham users 791 Feb  9  2006 Output.500
-rw-r--r-- 1 dunham users  23 Mar 21 11:47 pidigits.scala_out


PROGRAM OUTPUT
==============
no such file: pidigits
